changed date for recent post

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <p>I am currently in my mid-twenties and living with my girlfriend in the Boston area. I'm enrolled in Flatiron School's online Learn Verified program in hopes of becoming a full stack web developer. </p>
     </div>
-    <sub>as of 14 Nov '16</sub>
+    <sub>as of 4 December 2016</sub>
   </div>
 
   <div class="content-right">
@@ -63,11 +63,11 @@
         <img src="./images/blog-mid-jquery.png" alt="blog-mid-jquery">
         <img src="./images/blog-mid-jquery-mobile.png" alt="blog-mid-jquery-mobile">
       </div>
-      <sub>posted 30 November 2016</sub><br>
+      <sub>posted 4 December 2016</sub><br>
       <button class="showPost">more/less</button>
     </div>
 
-<div class="posts">
+    <div class="posts">
       <h3>Hey Flatiron Students, read this before starting your Rails/Angular final project</h3>
       <img src="./images/angular.png" alt="angular logo" class="right">
       <p>So you’ve finished the angular section and you’re on to your final project. Any big ideas? Building the next big thing? The next Facebook or Twitter?</p>
