--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="aboutme">
       <p>Hi, my name is James, welcome to my blog. Here you'll find posts on an array of different subjects including tech/webdev, volunteering, travel, business/finance, guitar/music, politics, soccer, art, cooking, family, reading, and beer.</p>
 
-      <p>I am currently in my mid-twenties and living with my girlfriend in the Boston area. Recently having graduated from the Flatiron School's online Learn Verified program, I am a contract online TA at the school and have hopes of becoming a full time developer. </p>
+      <p>I am currently in my mid-twenties and living with my girlfriend in the Boston area. Recently graduated from the Flatiron School's online Learn Verified program, I am a contract online TA at the school and have hopes of becoming a full time developer. </p>
     </div>
     <sub>as of 5 January 2017</sub>
   </div>
